--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Click Challenge</title>
+    <title>Click Test</title>
     <link rel="stylesheet" href="hci-style.css">
 </head>
 <body>
     <header>
-        <h1>Click the Heart Challenge</h1>
+        <h1>Button Click Speed Test</h1>
     </header>
     <main>
         <p id="instruction">Click the ❤️ as many times as you can in 15 seconds!</p>
@@ -23,7 +23,6 @@
         </div>
     </main>
     <footer>
-        <p>© 2024 Click Challenge.</p>
     </footer>
     <script src="script.js"></script>
 </body>
