--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="buttonsContainer">
             <button id="heartButton">❤️</button>
             <button id="commentButton">💬</button>
+            <button id="bookmarkButton">🔖</button>
             <button id="shareButton">🔗</button>
         </div>
         <div id="info">
